--- a/Workoutya/app/src/main/AndroidManifest.xml
+++ b/Workoutya/app/src/main/AndroidManifest.xml
@@ -8,19 +8,37 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainMenu">
+        <activity
+            android:name=".MainMenu"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Exercise_List" />
-        <activity android:name=".Credits" />
-        <activity android:name=".Exercise" />
-        <activity android:name=".Workout_List" />
-        <activity android:name=".Workout" />
-        <activity android:name=".Exercise_Menu"></activity>
+        <activity
+            android:name=".Exercise_List"
+            android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity
+            android:name=".Credits"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity
+            android:name=".Exercise"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity
+            android:name=".Workout_List"
+            android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity
+            android:name=".Workout"
+            android:theme="@android:style/Theme.NoTitleBar"/>
+        <activity
+            android:name=".Exercise_Menu"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar">
+        </activity>
     </application>
 
 </manifest>
